# SME2_GEMM

./: CMakeLists.txt  LICENSE  README.md
benchmark/: benchmark_gemm.cpp
include/sme2_gemm/: sme2_gemm.h  sme2_gemm_config.h  sme2_gemm_kernel.h  sme2_gemm_microkernel.h  sme2_rearrange.h  sme2_za_ops.h
sme_ops/: sme2_intrinsics_clang_20_1_8.h
src/include/: debug_util.h  sme2_gemm.h  sme2_gemm_impl.h
test/: test_main.cpp
test/include/: gemm_truth.h
